# CSOPESY

./: .gitignore  CSOPESY  CSOPESY.cpp  README.md  rr.cpp  sample-process.cpp  scheduler-dubious.cpp  tentative-alt-rr-NOTWORKING.cpp  tentative-alt-rr-bugged.cpp  test.cpp
Memory/: CMakeLists.txt  Screen.cpp  ScreenManager.cpp  config.cpp  console.cpp  memory.cpp  process.cpp  process_block.cpp  scheduler.cpp
Memory/headerFiles/: Screen.h  ScreenManager.h  config.h  console.h  memory.h  process.h  process_block.h  scheduler.h
drafts/: fcfs.cpp
emulator-whole/: config.txt  csopesy-wrr.cpp  csopesy-wschedulers.cpp
